fixed overflowing link on homepage (mobile)

--- a/style.css
+++ b/style.css
@@ -541,7 +541,6 @@ footer ul {
     body {
         font-size: 1.25rem;
         line-height: 1.5rem;
-        word-wrap: break-word;
     }
 
     table {
